removed unused placeholder

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <div id='06' class="row clock">
     <div id="pointf" class="col-sm-1 hour">06:00</div>
-    <textarea class="col-sm-8 taskDue" placeholder="Schedule between Midnight and 7AM"></textarea>
+    <textarea class="col-sm-8 taskDue"></textarea>
     <button class="col-sm-1 saveBtn btn"><i class="fas fa-save fa-lg"></i></button>
     <button id="donef" class="col-sm-1 doneBtn btn"><i class="fas fa-glass-cheers fa-lg"></i></button>
 </div>
